force-app/main/default/objects/Flight__c/fields/Number_of_Cockpit_Crew__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Cockpit_Crew__c</fullName>
    <label>Number of Cockpit Crew</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>