force-app/main/default/objects/Flight__c/fields/Number_of_GE__c.field-meta.xml
<CustomField>
    <fullName>Number_of_GE__c</fullName>
    <label>Number of GE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>