force-app/main/default/objects/Flight__c/fields/Number_of_Passive_Crew__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Passive_Crew__c</fullName>
    <label>Number of Passive Crew</label>
    <length>100</length>
    <type>Text</type>
</CustomField>