force-app/main/default/objects/Flight__c/fields/Over_Booked_Amount_txt__c.field-meta.xml
<CustomField>
    <fullName>Over_Booked_Amount_txt__c</fullName>
    <label>Over Booked Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>