force-app/main/default/objects/Flight__c/fields/Previous_Flight_Date_LT__c.field-meta.xml
<CustomField>
    <fullName>Previous_Flight_Date_LT__c</fullName>
    <label>Previous Flight Date LT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>