force-app/main/default/objects/Flight__c/fields/Previous_Flight_Date_UTC__c.field-meta.xml
<CustomField>
    <fullName>Previous_Flight_Date_UTC__c</fullName>
    <label>Previous Flight Date UTC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>