force-app/main/default/objects/Flight__c/fields/Previous_Flight_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Previous_Flight_External_Id__c</fullName>
    <label>Previous Flight External Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>