force-app/main/default/objects/Flight__c/fields/Previous_Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Previous_Flight_Number__c</fullName>
    <label>Previous Flight Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>