force-app/main/default/objects/Flight__c/fields/Report__c.field-meta.xml
<CustomField>
    <fullName>Report__c</fullName>
    <description>Unused

"00ON0000000LsvD?pv0=Text(Maintenance,New+Maintenance)&amp;pv1=' + AircraftId__r.Name</description>
    <formula>"/00ON0000000LsvD?pv0=" &amp; "012N000000053Q2, 012N000000055m5&amp;pv1=" +    AircraftId__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenace Report</label>
    <type>Text</type>
</CustomField>