force-app/main/default/objects/Flight__c/fields/Routing__c.field-meta.xml
<CustomField>
    <fullName>Routing__c</fullName>
    <description>Used for display</description>
    <externalId>true</externalId>
    <label>Routing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>