force-app/main/default/objects/Flight__c/fields/RPT_Next2Day__c.field-meta.xml
<CustomField>
    <fullName>RPT_Next2Day__c</fullName>
    <formula>IF(
OR(
(Flight_Date_LT_F__c - 1 = TODAY()) &amp;&amp; (STD_LT_DateTime__c >= DATETIMEVALUE(LEFT(STD_LT__c , 10) &amp; ' 05:00:00')),
(Flight_Date_LT_F__c - 2 = TODAY()) &amp;&amp; (STD_LT_DateTime__c &lt;= DATETIMEVALUE(LEFT(STD_LT__c , 10) &amp; ' 05:00:00'))
)
,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RPT Next2Day</label>
    <type>Checkbox</type>
</CustomField>