force-app/main/default/objects/Flight__c/fields/Scheduling_Type__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Type__c</fullName>
    <formula>CASE(MID(Flight_Number__c, 3, 1),
"8", "Non-Schedule",
"Schedule")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scheduling Type</label>
    <type>Text</type>
</CustomField>