force-app/main/default/objects/Flight__c/fields/Sector__c.field-meta.xml
<CustomField>
    <fullName>Sector__c</fullName>
    <description>Used for display</description>
    <formula>Departure_STN__c + "-" +  Arrival_STN__c</formula>
    <label>Sector</label>
    <type>Text</type>
</CustomField>