force-app/main/default/objects/Flight__c/fields/SSR_Report_Date__c.field-meta.xml
<CustomField>
    <fullName>SSR_Report_Date__c</fullName>
    <formula>IF( 
   ((STD_LT_DateTime__c - 3) &lt;= NOW()) &amp;&amp; 
   ((STD_LT_DateTime__c - 2) >= NOW())
, TRUE, FALSE)</formula>
    <label>SSR Report Date</label>
    <type>Checkbox</type>
</CustomField>