force-app/main/default/objects/Flight__c/fields/STA__c.field-meta.xml
<CustomField>
    <fullName>STA__c</fullName>
    <description>Used for display</description>
    <formula>IF(LEFT(SUBSTITUTE(LEFT(RIGHT( STA_LT__c , 8), 5), ":", "."),1) = "0", MID
(
SUBSTITUTE(LEFT(RIGHT( STA_LT__c , 8), 5), ":", "."), 2, 
LEN(SUBSTITUTE(LEFT(RIGHT( STA_LT__c , 8), 5), ":", ".")
)
), SUBSTITUTE(LEFT(RIGHT( STA_LT__c , 8), 5), ":", "."))</formula>
    <label>STA</label>
    <type>Text</type>
</CustomField>