force-app/main/default/objects/Flight__c/fields/STA_LT__c.field-meta.xml
<CustomField>
    <fullName>STA_LT__c</fullName>
    <label>STA LT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>