force-app/main/default/objects/Flight__c/fields/STA_LT_DateTime__c.field-meta.xml
<CustomField>
    <fullName>STA_LT_DateTime__c</fullName>
    <formula>DATETIMEVALUE( STA_LT__c )</formula>
    <label>STA LT DateTime</label>
    <type>DateTime</type>
</CustomField>