force-app/main/default/objects/Flight__c/fields/STA_LT_Datetime_F__c.field-meta.xml
<CustomField>
    <fullName>STA_LT_Datetime_F__c</fullName>
    <formula>MID(STA_LT__c , 9, 2) + '/' + 
MID(STA_LT__c, 6, 2) + '/' + 
MID(STA_LT__c, 1, 4) + ' ' + 
MID(STA_LT__c, 12, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STA LT (Datetime)</label>
    <type>Text</type>
</CustomField>