force-app/main/default/objects/Flight__c/fields/STA_UTC__c.field-meta.xml
<CustomField>
    <fullName>STA_UTC__c</fullName>
    <label>STA UTC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>