force-app/main/default/objects/Flight__c/fields/STA_UTC_DateTime__c.field-meta.xml
<CustomField>
    <fullName>STA_UTC_DateTime__c</fullName>
    <formula>DATETIMEVALUE( STA_UTC__c )</formula>
    <label>STA UTC DateTime</label>
    <type>DateTime</type>
</CustomField>