force-app/main/default/objects/Flight__c/fields/Status_txt__c.field-meta.xml
<CustomField>
    <fullName>Status_txt__c</fullName>
    <description>For M2

Maintenance Case Color Code</description>
    <formula>IMAGE("https://c.cs6.content.force.com/servlet/servlet.ImageServer?id=015N0000000W2ds&amp;oid=00DN0000000AfvZ&amp;lastMod=1475563007000", "")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Status</label>
    <type>Text</type>
</CustomField>