force-app/main/default/objects/Flight__c/fields/STD_LT__c.field-meta.xml
<CustomField>
    <fullName>STD_LT__c</fullName>
    <label>STD LT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>