force-app/main/default/objects/Flight__c/fields/STD_LT_DateTime__c.field-meta.xml
<CustomField>
    <fullName>STD_LT_DateTime__c</fullName>
    <formula>DATETIMEVALUE( STD_LT__c )</formula>
    <label>STD LT DateTime</label>
    <type>DateTime</type>
</CustomField>