force-app/main/default/objects/Flight__c/fields/STD_LT_Datetime_F__c.field-meta.xml
<CustomField>
    <fullName>STD_LT_Datetime_F__c</fullName>
    <formula>MID(STD_LT__c , 9, 2) + '/' + 
MID(STD_LT__c , 6, 2) + '/' + 
MID(STD_LT__c , 1, 4) + ' ' + 
MID(STD_LT__c , 12, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>STD LT (Datetime)</label>
    <type>Text</type>
</CustomField>