force-app/main/default/objects/Flight__c/fields/STD_STA__c.field-meta.xml
<CustomField>
    <fullName>STD_STA__c</fullName>
    <formula>STD__c &amp; " / " &amp; STA__c</formula>
    <label>STD / STA</label>
    <type>Text</type>
</CustomField>