force-app/main/default/objects/Flight__c/fields/STD_UTC__c.field-meta.xml
<CustomField>
    <fullName>STD_UTC__c</fullName>
    <label>STD UTC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>