force-app/main/default/objects/Flight__c/fields/STD_UTC_DateTime__c.field-meta.xml
<CustomField>
    <fullName>STD_UTC_DateTime__c</fullName>
    <formula>DATETIMEVALUE( STD_UTC__c )</formula>
    <label>STD UTC DateTime</label>
    <type>DateTime</type>
</CustomField>