force-app/main/default/objects/Flight__c/fields/STD_UTC_TEST_del__c.field-meta.xml
<CustomField>
    <fullName>STD_UTC_TEST_del__c</fullName>
    <formula>TEXT(DAY(DATEVALUE(STD_UTC__c))) + "/" + TEXT(MONTH(DATEVALUE( STD_UTC__c ))) + "/" + TEXT(YEAR(DATEVALUE( STD_UTC__c ))) + " " + LEFT(RIGHT(STD_UTC__c,Find(" ", STD_UTC__c)-2), 6)</formula>
    <label>STD_UTC_TEST</label>
    <type>Text</type>
</CustomField>