force-app/main/default/objects/Flight__c/fields/Total_Elapsed_Time__c.field-meta.xml
<CustomField>
    <fullName>Total_Elapsed_Time__c</fullName>
    <formula>IF( Leg_Number__c > 1, 
LPAD(
LEFT( 
TEXT(
(STA_UTC_DateTime__c -  First_Leg__r.STD_UTC_DateTime__c) * 24
)
,1)
,2 ,"0")
&amp;
TEXT(
FLOOR( 
VALUE(
MID(TEXT(
    (STA_UTC_DateTime__c -  First_Leg__r.STD_UTC_DateTime__c) * 24
    ), 
 FIND('.', 
     TEXT(
    (STA_UTC_DateTime__c -  First_Leg__r.STD_UTC_DateTime__c) * 24
    ) )+ 1
   , 2)
)
 * 0.6)
)
, Flying_Time_Elapsed_Time__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Elapsed Time</label>
    <type>Text</type>
</CustomField>