force-app/main/default/objects/Flight__c/recordTypes/New_Flight.recordType-meta.xml
<RecordType>
    <fullName>New_Flight</fullName>
    <active>true</active>
    <label>New Flight</label>
</RecordType>