force-app/main/default/objects/Flight__c/listViews/All_Flight_Schedule.listView-meta.xml
<ListView>
    <fullName>All_Flight_Schedule</fullName>
    <columns>NAME</columns>
    <columns>AircraftId__c</columns>
    <columns>Departure_STN__c</columns>
    <columns>Arrival_STN__c</columns>
    <columns>Aircraft_Type__c</columns>
    <columns>BAY_ARR_DEP__c</columns>
    <columns>STA_UTC_Display__c</columns>
    <columns>ETA_UTC_Display__c</columns>
    <columns>STD_UTC_Display__c</columns>
    <columns>ETD_UTC_Display__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Flight Schedule</label>
    <language>en_US</language>
    <sharedTo>
        <group>Aircraft_Maintenance_Team</group>
    </sharedTo>
</ListView>