force-app/main/default/objects/Flight__c/listViews/My_Station.listView-meta.xml
<ListView>
    <fullName>My_Station</fullName>
    <columns>NAME</columns>
    <columns>Routing__c</columns>
    <columns>Sector__c</columns>
    <columns>Flight_Date_UTC__c</columns>
    <columns>Flight_Date_F__c</columns>
    <columns>STA__c</columns>
    <columns>STD__c</columns>
    <columns>Leg_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>My_Station_F__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>STA_LT_DateTime__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>My Station</label>
    <language>en_US</language>
    <sharedTo>
        <role>Ground_Customer_Service_Abroad_Station</role>
    </sharedTo>
</ListView>